--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ts-jest": "^29.0.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.0.3",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
