--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "mongodb": "^4.10.0",
     "ts-jest": "^29.0.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@shelf/jest-mongodb": "3.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.0.3",
+    "@types/mongodb": "^4.0.7",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
