--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,18 +37,7 @@
     "no-param-reassign": [2, { "props": false }],
     "camelcase": "off",
     "import/no-unresolved": "error",
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "interface",
-        "format": ["PascalCase"]
-      },
-      { "selector": "class", "format": ["PascalCase"] },
-      { "selector": "classMethod", "format": ["camelCase"] },
-      { "selector": "classProperty", "format": ["camelCase"] },
-      { "selector": "variable", "format": ["camelCase"] },
-      { "selector": "function", "format": ["camelCase"] }
-    ],
+    "@typescript-eslint/naming-convention": "off",
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
     "no-shadow": "off",
