--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "dev": "sucrase-node src/main/server.ts",
     "lint": "eslint '*/**/*.ts' --quiet --fix",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "ts-jest": "^29.0.1",
     "validator": "^13.7.0"
@@ -27,6 +29,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@shelf/jest-mongodb": "3.0.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
     "@types/mongodb": "^4.0.7",
     "@types/validator": "^13.7.6",
@@ -44,6 +47,7 @@
     "jest": "^29.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "sucrase": "^3.27.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
