--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
+    "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
     "validator": "^13.7.0"
   },
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
     "@types/mongodb": "^4.0.7",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
