--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "fast-glob": "^3.2.12",
     "mongodb": "^4.10.0",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
