refactor: move required field validations to the ValidationComposite

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "eslint-plugin-unicorn"
   ],
   "rules": {
+    "consistent-return": "off",
     "no-promise-executor-return": "off",
     "max-classes-per-file": "off",
     "no-restricted-syntax": "off",
