--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "fast-glob": "^3.2.12",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
@@ -33,6 +34,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongodb": "^4.0.7",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.6",
