--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "start": "HTTP_PORT=5051 node dist/main/server.js",
+    "build": "rimraf dist && tsc",
     "dev": "sucrase-node src/main/server.ts",
     "lint": "eslint '*/**/*.ts' --quiet --fix",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
@@ -20,7 +22,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
-    "fast-glob": "^3.2.12",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "supertest": "^6.2.4",
@@ -52,6 +53,7 @@
     "jest": "^29.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.27.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
